# Physics_Library

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  MovementTest.sln  MovementTest.vcxproj  MovementTest.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Test/: movementTest.cpp
include/: Movement.h  physics.h
linux/: CMakeLists.txt
linux/example/: CMakeLists.txt  main.cpp
linux/example/hitscan/: main.cpp
linux/example/projectile/: main.cpp
source/common/: object_info.h  objects.cpp  objects.h
source/filter/: projectile_gun_filter.cpp  projectile_gun_filter.h
source/gun/: hitscan_shoot_process.cpp  hitscan_shoot_process.h  projectile_shoot_process.cpp  projectile_shoot_process.h  source_info.h  target_info.h
source/movement/: Movement.cpp  Movement.h  character_info.h
window/: CMakeLists.txt
window/Test/: CMakeLists.txt  movementTest.cpp
window/lib_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PhysXCharacterMovement.vcxproj  PhysXCharacterMovement.vcxproj.filters  PhysX_Library.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
window/lib_build/Debug/: PhysXCharacterMovement.lib
window/lib_build/PhysXCharacterMovement.dir/Debug/: PhysXCharacterMovement.lib.recipe
window/lib_build/PhysXCharacterMovement.dir/Debug/PhysXCha.6986648F.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
window/lib_build/PhysXCharacterMovement.dir/Release/PhysXCha.6986648F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
window/lib_build/Release/: PhysXCharacterMovement.lib
window/lib_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
window/lib_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
window/lib_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
window/lib_build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
window/lib_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
window/lib_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
